--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
   "name": "vue-infinite-grid",
   "version": "0.1.0",
-  "private": true,
+  "description": "Vue component representing an infinitely-expandable grid",
+  "main": "dist/vue-infinite-grid.common.js",
+  "author": "TAGC",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TAGC/vue-infinite-grid"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vue-cli-service serve demo/src/main.ts",
+    "build": "vue-cli-service build --target lib src/Foo.vue",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-class-component": "^6.0.0",
+    "vue-property-decorator": "^6.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+    "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
     "vue-template-compiler": "^2.5.16"
   },
