--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
   "name": "vue-infinite-grid",
   "version": "0.1.0",
-  "description": "Vue component representing an infinitely-expandable grid",
-  "main": "dist/vue-infinite-grid.common.js",
-  "author": "TAGC",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/TAGC/vue-infinite-grid"
-  },
   "scripts": {
-    "dev": "vue-cli-service serve demo/src/main.ts",
     "build": "vue-cli-service build --target lib src/index.ts",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve demo/src/main.ts",
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "lodash": "^4.17.10",
@@ -23,13 +16,19 @@
     "vue-virtual-collection": "^1.2.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.3",
     "@types/lodash": "^4.14.109",
+    "@types/mocha": "^5.2.1",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.16",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/test-utils": "^1.0.0-beta.16",
+    "chai": "^4.1.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "tslint": "^5.10.0",
+    "tslint-no-unused-expression-chai": "^0.1.3",
     "vue-template-compiler": "^2.5.16"
   },
   "babel": {
@@ -46,5 +45,13 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "license": "MIT",
+  "author": "TAGC",
+  "main": "dist/vue-infinite-grid.common.js",
+  "description": "Vue component representing an infinitely-expandable grid",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TAGC/vue-infinite-grid"
+  }
 }
