--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "build": "vue-cli-service build --target lib src/index.ts",
+    "build:demo": "vue-cli-service build --target app --name 'vue-infinite-grid' demo/src/main.ts",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve demo/src/main.ts",
     "test": "vue-cli-service test:unit"
@@ -27,10 +28,10 @@
     "@types/chai": "^4.1.3",
     "@types/lodash": "^4.14.109",
     "@types/mocha": "^5.2.1",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
+    "@vue/cli-plugin-babel": "^3.0.0-beta.16",
+    "@vue/cli-plugin-typescript": "^3.0.0-beta.16",
     "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.16",
-    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.0.0-beta.16",
     "@vue/test-utils": "^1.0.0-beta.16",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
