--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.16",
     "@vue/cli-service": "^3.0.0-beta.16",
     "@vue/test-utils": "^1.0.0-beta.16",
+    "ajv": "^6.5.1",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "tslint": "^5.10.0",
     "tslint-no-unused-expression-chai": "^0.1.3",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-template-compiler": "^2.5.16"
   },
   "babel": {
