--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve demo/src/main.ts",
     "test": "vue-cli-service test:unit",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "lodash": "^4.17.10",
