--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "author": "TAGC",
   "main": "dist/vue-expandable-grid.common.js",
   "description": "Vue component representing an infinitely-expandable grid",
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/TAGC/vue-expandable-grid"
+  },
+  "bugs": {
+    "url": "https://github.com/TAGC/vue-expandable-grid/issues"
   },
   "scripts": {
     "build": "vue-cli-service build --target lib src/index.ts",
@@ -19,11 +23,12 @@
   },
   "dependencies": {
     "lodash": "^4.17.10",
-    "vue": "^2.5.16",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^6.0.0",
     "vue-resize": "^0.4.4",
+    "vue-property-decorator": "^6.0.0",
     "vue-virtual-collection": "^1.2.3"
+  },
+  "peerDependencies": {
+    "vue": "^2.5.16"
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
@@ -40,6 +45,7 @@
     "sass-loader": "^7.0.3",
     "tslint": "^5.10.0",
     "tslint-no-unused-expression-chai": "^0.1.3",
+    "vue": "^2.5.16",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-template-compiler": "^2.5.16"
   },
@@ -57,5 +63,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
+  ],
+  "files": [
+    "dist/"
   ]
 }
