--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "author": "TAGC",
   "main": "dist/vue-expandable-grid.common.js",
+  "types": "dist/typings/index.d.ts",
   "description": "Vue component representing an infinitely-expandable grid",
   "sideEffects": false,
   "repository": {
@@ -14,12 +15,15 @@
     "url": "https://github.com/TAGC/vue-expandable-grid/issues"
   },
   "scripts": {
-    "build": "vue-cli-service build --target lib src/index.ts",
+    "build": "npm run build:lib && npm run build:types",
+    "build:lib": "vue-cli-service build --target lib src/index.ts",
+    "build:types": "tsc -p tsconfig.types.json && cp -R typings/* dist/typings",
     "build:demo": "vue-cli-service build --target app --name 'vue-expandable-grid' demo/src/main.ts",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve demo/src/main.ts",
     "test": "vue-cli-service test:unit",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "lodash": "^4.17.10",
@@ -42,9 +46,11 @@
     "ajv": "^6.5.1",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "tslint": "^5.10.0",
     "tslint-no-unused-expression-chai": "^0.1.3",
+    "typescript": "^2.9.1",
     "vue": "^2.5.16",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-template-compiler": "^2.5.16"
