--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "vue-resize": "^0.4.4",
-    "vue-property-decorator": "^6.0.0",
+    "vue-property-decorator": "^6.1.0",
     "vue-virtual-collection": "^1.2.3"
   },
   "peerDependencies": {
     "vue": "^2.5.16"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.3",
+    "@types/chai": "^4.1.4",
     "@types/lodash": "^4.14.109",
-    "@types/mocha": "^5.2.1",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.16",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.16",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.16",
-    "@vue/cli-service": "^3.0.0-beta.16",
-    "@vue/test-utils": "^1.0.0-beta.16",
+    "@types/mocha": "^5.2.2",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.1",
+    "@vue/cli-plugin-typescript": "^3.0.0-rc.1",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.1",
+    "@vue/cli-service": "^3.0.0-rc.1",
+    "@vue/test-utils": "^1.0.0-beta.18",
     "ajv": "^6.5.1",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
@@ -49,7 +49,7 @@
     "sass-loader": "^7.0.3",
     "tslint": "^5.10.0",
     "tslint-no-unused-expression-chai": "^0.1.3",
-    "typescript": "^2.9.1",
+    "typescript": "^2.9.2",
     "vue": "^2.5.16",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-template-compiler": "^2.5.16"
