--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^2.9.2",
     "vue": "^2.5.16",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16"
   },
   "babel": {
